Debut de code sur le projet Black Panther

--- a/assets/Index_BlackPanther.html
+++ b/assets/Index_BlackPanther.html
@@ -29,15 +29,16 @@
                 </div>
               </div>
               <div class id="bas">
-                <div class="up-bar"></div>
-                <div class="left-bar"></div>
-                <div class="right-bar"></div>
-                    <div class="scrool">
-                      <a href=""></a><img class="social" src="/assets/Illustrations + Logo/All pages/icon_facebook.png" alt="Logos"></a>
-                      <a href=""></a><img class="social" src="/assets/Illustrations + Logo/All pages/icon_instagram.png" alt="Logos"></a>
-                      <a href=""></a><img class="social" src="/assets/Illustrations + Logo/All pages/icon_twitter.png" alt="Logos"></a>
-                      <a href=""></a><img class="social" src="/assets/Illustrations + Logo/All pages/icon_tiktok.png" alt="Logos"></a>
-                     </div>
+                       <div class="traits"></div>
+                      <div class="trait-1"></div>
+                      <div class="social-media"></div>
+                      <div class="trait-2"></div>
+                <div class="scrool">
+                      <a href="facebook"></a><img class="social" src="/assets/Illustrations + Logo/All pages/icon_facebook.png" alt="Logos"></a>
+                      <a href="instag"></a><img class="social" src="/assets/Illustrations + Logo/All pages/icon_instagram.png" alt="Logos"></a>
+                      <a href="twiter"></a><img class="social" src="/assets/Illustrations + Logo/All pages/icon_twitter.png" alt="Logos"></a>
+                      <a href="tiktok"></a><img class="social" src="/assets/Illustrations + Logo/All pages/icon_tiktok.png" alt="Logos"></a>
+                </div>
                   <div class="text">
                     <div class="slide-content">
                       <h1 class="titre">BLACK PANTHER</h1>
@@ -207,18 +208,18 @@ en 2023) (2016)</span></li>
     </div>
   </div>
 </section>
-  <div class="procting">
-    <img src="/assets/Illustrations + Logo/Accueil/Pantherhome7.png" alt="">
-  </div>
   <!--Formulaire d'inscription-->
   <section id="Infoline">
+    <div class="warapper">
+      <img src="/assets/Illustrations + Logo/Accueil/Pantherhome7.png" alt="">
+    </div>
     <div class="form">
       <p>Besoin de l’intervention du Wakanda ?</p>
-      <h1 class="infos">Contactez-nous!</h1>
+      <h1 class="infos">Contactez nous!</h1>
         <form class="action">
             <textarea class="nom"name="" id="" cols="50" placeholder="Nom"></textarea>
             <textarea class="email"name="" id="" cols="50" placeholder="Email"></textarea>
-            <textarea class="message"name="" id = "message" rows="10" cols="50">Message></textarea>
+            <textarea class="message"name="" id = "message" rows="10" cols="50">Message</textarea>
             <input type="submit" value="Envoyer">
           </form>
       </div>
@@ -239,10 +240,10 @@ en 2023) (2016)</span></li>
             <div class="social-footer">
                 <h2>RETROUVEZ NOUS</h2>
                 <span>
-                  <img src="/assets/Illustrations + Logo/All pages/footer3.png" alt="">
-                  <img src="/assets/Illustrations + Logo/All pages/footer4.png" alt="">
-                  <img src="/assets/Illustrations + Logo/All pages/footer5.png" alt="">
-                  <img src="/assets/Illustrations + Logo/All pages/footer6.png" alt="">
+                  <a href="facebook"></a><img src="/assets/Illustrations + Logo/All pages/footer3.png" alt=""></a>
+                  <a href="instag"></a><img src="/assets/Illustrations + Logo/All pages/footer4.png" alt=""></a>
+                  <a href="twiter"></a><img src="/assets/Illustrations + Logo/All pages/footer5.png" alt=""></a>
+                  <a href="tiktok"></a><img src="/assets/Illustrations + Logo/All pages/footer6.png" alt=""></a>
               </span>
             </div>
         </span>
